--- a/h7/package.json
+++ b/h7/package.json
@@ -10,6 +10,7 @@
     "firebase": "^9.16.0",
     "formik": "^2.2.9",
     "react": "^18.2.0",
+    "react-animations": "^1.0.0",
     "react-dom": "^18.2.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.6.2",
