--- a/h7/package.json
+++ b/h7/package.json
@@ -1,5 +1,6 @@
 {
   "name": "h7",
+  "homepage": "https://raincbc.github.io/Yalp-app/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,6 +10,7 @@
     "classnames": "^2.3.2",
     "firebase": "^9.16.0",
     "formik": "^2.2.9",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-animations": "^1.0.0",
     "react-dom": "^18.2.0",
@@ -20,6 +22,8 @@
     "yup": "^0.32.11"
   },
   "scripts": {
+    "predeploy":"yarn build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
